fix aligning + background on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,6 @@
 @import 'tailwindcss';
+
+
+body, html, body>div {
+    min-height: 100%;
+}
